--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="twitter:title" content="Global Promotion Partner">
     <meta name="twitter:description" content="Global Promotion Partner">
     <meta name="twitter:url" content="https://rankingoptimization.net">
-    <meta name="twitter:image" content="https://amazonadc.github.io/us/azonad.png">
+    <meta name="twitter:image" content="https://datarevolt.github.io/advertise.png">
     <meta name="twitter:image:alt" content="Global Promotion Partner">
 
     <link rel="icon" type="image/x-icon" href="https://amazonadc.github.io/us/DataRevolt.ico"> 
