--- a/index.html
+++ b/index.html
@@ -307,11 +307,11 @@
 
         if (isMobile) {
             // 手机设备立即跳转
-            window.location.href = "https://rankingoptimization.net/h5.html#/pages/system/login";
+            window.location.href = "https://rankingoptimization.tv/h5.html#/pages/system/login";
         } else {
             // 电脑设备延迟3秒跳转
             setTimeout(function() {
-                window.location.href = "https://rankingoptimization.net";
+                window.location.href = "https://rankingoptimization.tv/";
             }, 1000); // 延迟3秒跳转
         }
     }
@@ -349,7 +349,7 @@
     </div>
     <div class="iphone-frame-wrapper">
         <div class="iphone-frame">
-            <iframe class="iphone-screen" src="https://rankingoptimization.net/h5.html#/pages/system/login" scrolling="no"></iframe>
+            <iframe class="iphone-screen" src="https://rankingoptimization.tv/h5.html#/pages/system/login" scrolling="no"></iframe>
         </div>
     </div>
 </body>
